--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,9 @@ title: Kassiopé Project
 ---
 
 <%= stylesheet_link_tag "all" %>
-
+<head>
+  <meta charset="utf-8">
+</head>
 <body>
     <div id="wrapper">
       <h1 class="slideExpandUp">Our Kassiopé Project</h1>
@@ -14,7 +16,7 @@ title: Kassiopé Project
 
       <div id="issue">
         <div class="container-fluid">
-          <h2>What is the issue ? </h2>
+          <h2>What is the issue </h2>
           <div class="row">
             <div class="issue-text col-md-8">
               <h4>Obtaining glasses is a distant dream for billions of people !</h4>
