--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-  background-color: #fcfaf0;
+  background-color: #fff;
   font-family: $text-font;
   font-weight: 300;
   line-height: 1.5em;
@@ -23,7 +23,7 @@ img {
 
 
 #wrapper {
-  background-image: image-url("kids-writing.jpg");
+  background-image: image-url("classroom.jpg");
   opacity: 0.85;
   background-size: cover;
   height: auto;
@@ -37,7 +37,7 @@ img {
     color: black;
     font-family: $title-font;
     font-weight: bold;
-    font-size: 130px;
+    font-size: 150px;
     letter-spacing: 15px;
   }
 }
@@ -45,7 +45,7 @@ img {
 
 h2 {
   font-family: $title-font;
-  font-size: 60px;
+  font-size: 75px;
   text-align: center;
   padding: 30px 0px 30px 0px;
 }
