--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,63 +10,62 @@ title: Kassiopé Project
     <div id="wrapper">
       <h1 class="slideExpandUp">Our Kassiopé Project</h1>
       <!-- Button trigger modal -->
+      <div class="arrow text-center">
+        <a href="#issue">
+          <i class="fa fa-angle-down pulse" style="font-size: 90px; color: black;"></i>
+        </a>
+
+      </div>
     </div>
 
-    <div id="homepage">
 
       <div id="issue">
+        <h2>What is the issue  </h2>
+        <h4>1.000.000.000 people suffer from refractive error !</h4>
         <div class="container-fluid">
-          <h2>What is the issue </h2>
           <div class="row">
-            <div class="issue-text col-md-8">
-              <h4>Obtaining glasses is a distant dream for billions of people !</h4>
-              <p>
-                Access to proper glasses and especially eye care is highly restricted in most urbanizing countries.<br/>
-                According to the World Health Organization, well over a billion people suffer from refractive error making it
-                the number one cause for low vision in our world. Lack of proper eyesight engenders terrible consequences to
-                those affected by it.<br/><br/>
-                Indeed, opportunities diminish as one’s capacities decreases :
-                <ul>
-                  <li>Low eyesight impedes on literacy making better job offers and social emancipation impossible for a
-                  large percentage of the population</li>
-                  <li>Quality of life recedes as everyday tasks become a challenge</li>
-                  <li>General health can also be greatly deteriorated and in the worst cases may lead to blindness</li>
-                </ul>
-              </p>
+            <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
+
+              <%= image_tag "rub.svg", width: "100", height: "100", class: "rubik-img logo-img" %>
+              <p>Every daily task becomes a challenge !</p>
             </div>
 
-            <div class="issue-image col-md-4">
-              <%= image_tag "plusieurs.jpg", class: "img-rounded" %>
+            <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
+              <%= image_tag "read-book-logo.svg", width: "100", height: "100", class: "book-img logo-img" %>
+              <p>Studying results impossible !</p>
             </div>
+
+            <div class="glasses scrollReveal feature col-md-4 col-xs-12">
+              <%= image_tag "glasses.svg", width: "150", height: "100", class: "glasses-img logo-img" %>
+              <p>Glasses are not affordable !</p>
+            </div>
+          </div>
 
           </div>
 
-        </div>
       </div>
 
       <div id="action">
         <h2>Our action in Ahmedabad</h2>
         <div class="container-fluid">
           <div class="row">
-            <div class="action-img col-md-4">
-              <%= image_tag "readindia.png", class: "left-image img-rounded" %>
-            </div>
-
-            <div class="action-text col-md-8">
+            <div class="action-text col-md-8 col-xs-12">
               <ul>
                 <li>Our project will take place during the summer break of 2016</li>
                 <li>Provide the students of the center with free eye tests</li>
                 <li>Order glasses from local opticians for the students in need of eye corrections</li>
                 <li>Teaching members of Manav Sadhna how to perform an eye test</li>
                 <li>Elaborate a collaboration between Manav Sadhna and donors for a monthly supply of glasses to the community</li>
-                <li>In that way, consolidate our project on the long run</li>
+                <li>In that way : Consolidate our project on the long run</li>
               </ul>
             </div>
 
+            <div class="action-img text-center col-md-4 col-xs-12">
+              <%= image_tag "fille.png", width: "500", height: "300", class: "img-thumbnail" %>
+            </div>
+
           </div>
-
         </div>
-
       </div>
 
       <div id="us">
@@ -85,7 +84,7 @@ title: Kassiopé Project
             </div>
 
             <div class="us-img col-md-4">
-              <%= image_tag "coffee.jpg", class: "img-rounded" %>
+              <%= image_tag "morvan.jpg", class: "img-thumbnail" %>
             </div>
 
           </div>
@@ -109,4 +108,6 @@ title: Kassiopé Project
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
+
   </body>
