--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -27,6 +27,13 @@ html, body {
     letter-spacing: 15px;
   }
   .arrow {
+    position: absolute;
+    width: 100px;
+    margin-left: -50px;
+    bottom: 15px;
+    left: 50%;
+    text-align: center;
+    font-size: 60px;
   }
 }
 
@@ -49,7 +56,7 @@ h4 {
 .feature {
   text-align: center;
   font-family: $text-font;
-  font-size: 22px;
+  font-size: 26px;
 }
 
 .feature img {
@@ -57,15 +64,18 @@ h4 {
 }
 
 #issue {
-    margin-top: 50px;
+    padding-top: 35px;
     height: auto;
-    min-height: 100%;
+    min-height: 80%;
 }
 
 #action {
   height: auto;
-  min-height: 100%;
+  min-height: 80%;
   font-size: 20px;
+  h2 {
+    padding-bottom: 1em;
+  }
   li {
     padding-bottom: 1em;
   }
