Responsive changes except wrapper

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,6 +9,9 @@ title: Kassiopé Project
 <body>
     <div id="wrapper">
       <h1 class="slideExpandUp">Our Kassiopé Project</h1>
+      <div class="text-center">
+        <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
+      </div>
       <!-- Button trigger modal -->
       <div class="arrow text-center">
         <a href="#issue">
@@ -59,7 +62,7 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-4 col-xs-12">
-              <%= image_tag "fille.png", width: "500", height: "300", class: "img-thumbnail" %>
+              <%= image_tag "fille.png", width: "500", height: "300", class: "img-thumbnail hidden-xs" %>
             </div>
 
           </div>
@@ -68,35 +71,33 @@ title: Kassiopé Project
 
       <div id="us">
         <h2>Let's talk about us !</h2>
+        <p>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</br>
+        Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</br>
+        We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.
+        </p>
         <div class="container-fluid">
           <div class="row">
-            <div class="us-text col-md-8">
-              <ul>
-                <li>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</li>
-                <li>Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</li>
-              </ul>
 
+            <div class="space col-xs-2">
             </div>
 
-            <div class="us-img col-md-4">
-              <%= image_tag "morvan.jpg", class: "img-thumbnail" %>
+            <div class="us-text text-center col-xs-8">
+              <%= image_tag "matt.jpg", class: "img-thumbnail hidden-xs" %>
             </div>
 
+            <div class="space col-xs-2">
+            </div>
           </div>
 
         </div>
+
+      </div> <!--Close id us -->
+
+      <div class="space">
+
       </div>
 
-    </div> <!--Close id homepage -->
 
-
-    <div id="donation" style="text-align:center">
-      <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg active" role="button">I support Kassiopé</a>
-    </div>
-
-    <div class="footer">
-
-    </div>
 
 
 
