--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -37,9 +37,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Our action", "action.html" %></li>
+            <!--<li><%= link_to "Our action", "action.html" %></li>
             <li><%= link_to "About us", "team.html" %></li>
-            <li><%= link_to "Our partners", "partners.html" %></li>
+            <li><%= link_to "Our partners", "partners.html" %></li>-->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
