Change wrapper image + background + image matthew

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -82,7 +82,7 @@ title: Kassiopé Project
             </div>
 
             <div class="us-text text-center col-xs-8">
-              <%= image_tag "matt.jpg", class: "img-thumbnail hidden-xs" %>
+              <%= image_tag "matt.png", class: "img-rounded hidden-xs" %>
             </div>
 
             <div class="space col-xs-2">
