--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-  background-color: #fff;
+  background-color: #fcf3d2;
   font-family: $text-font;
   font-weight: 300;
   line-height: 1.5em;
@@ -8,8 +8,8 @@ html, body {
 
 
 #wrapper {
-  background-image: image-url("classroom.jpg");
-  opacity: 0.9;
+  background-image: image-url("girl-reading.png");
+  opacity: 1;
   background-size: cover;
   height: auto;
   min-height: 100%;
@@ -20,11 +20,11 @@ html, body {
     display: inline-block;;
     margin-bottom: 30px;
     opacity: 1;
-    color: black;
+    color: #a98c4a;
     font-family: $title-font;
     font-weight: bold;
     letter-spacing: 15px;
-    font-size: 100px;;
+    font-size: 150px;;
   }
   a {
     margin-top: 15px;
@@ -56,6 +56,7 @@ h4 {
   font-size: 28px;
   text-align: center;
   padding-bottom: 1em;
+  line-height: 4em;
 }
 
 .feature {
@@ -72,6 +73,7 @@ h4 {
     padding-top: 35px;
     height: auto;
     min-height: 80%;
+    line-height:2.5em;
 }
 
 #action {
@@ -81,10 +83,14 @@ h4 {
   h2 {
     padding-bottom: 1em;
   }
+  .action-text {
+    margin-left: 0px;
+  }
   li {
     padding-bottom: 1em;
   }
   img {
+    margin-bottom: 40px;
     text-align: center;
   }
 }
@@ -92,6 +98,9 @@ h4 {
 #us {
   p {
     text-align: center;
+    font-family: $text-font;
+    font-size: 20px;
+    line-height: 2.3em;
   }
   img {
     height: 300px;
