Change wrapper image + add box

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Kassiopé Project
 <body>
     <div id="wrapper">
       <h1 class="slideExpandUp">Our Kassiopé Project</h1>
-      <div class="text-center">
+      <div class="text-center button">
         <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
       </div>
       <!-- Button trigger modal -->
@@ -21,7 +21,7 @@ title: Kassiopé Project
     </div>
 
 
-      <div id="issue">
+      <div id="issue" class="box">
         <h2>What is the issue  </h2>
         <h4>1.000.000.000 people suffer from refractive error !</h4>
         <div class="container-fluid">
@@ -46,8 +46,8 @@ title: Kassiopé Project
 
       </div>
 
-      <div id="action">
-        <h2>Our action in Ahmedabad</h2>
+      <div id="action" class="box">
+        <h2>Our action in Ahmedabad (India)</h2>
         <div class="container-fluid">
           <div class="row">
             <div class="action-text col-md-8 col-xs-12">
@@ -62,14 +62,14 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-4 col-xs-12">
-              <%= image_tag "fille.png", width: "500", height: "300", class: "img-thumbnail hidden-xs" %>
+              <%= image_tag "fille.png", class: "hidden-xs" %>
             </div>
 
           </div>
         </div>
       </div>
 
-      <div id="us">
+      <div id="us" class="box">
         <h2>Let's talk about us !</h2>
         <p>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</br>
         Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</br>
