--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-  background-color: #fcf3d2;
+  background-color: #ccc;
   font-family: $text-font;
   font-weight: 300;
   line-height: 1.5em;
@@ -9,7 +9,7 @@ html, body {
 
 #wrapper {
   background-image: image-url("girl-reading.png");
-  opacity: 1;
+  opacity: 0.9;
   background-size: cover;
   height: auto;
   min-height: 100%;
@@ -20,16 +20,25 @@ html, body {
     display: inline-block;;
     margin-bottom: 30px;
     opacity: 1;
-    color: #a98c4a;
+    color: black;
     font-family: $title-font;
     font-weight: bold;
     letter-spacing: 15px;
     font-size: 150px;;
   }
-  a {
+  .button a {
     margin-top: 15px;
     padding: 15px;
-    font-size: 24px;
+    font-size: 20px;
+    background-color: transparent;
+    border: 3px solid #fff;
+    text-transform: uppercase;
+    border-radius: 0.2;
+    -webkit-transition: 0.2s linear;
+    transition: 0.2s linear;
+    &:hover {
+      font-size: 25px;
+    }
   }
   .arrow {
     position: absolute;
@@ -69,6 +78,17 @@ h4 {
     margin: 2em 0em 2em 0em;
 }
 
+.box {
+  margin: 50px 80px 50px 80px;
+  padding: 30px;
+  background-color: #eee;
+  border-radius: 1;
+  max-width: 1200px;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #issue {
     padding-top: 35px;
     height: auto;
@@ -77,6 +97,7 @@ h4 {
 }
 
 #action {
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3…9IjAuNSIgZmlsbD0ibm9uZSIgd2lkdGg9Ijk3MCIgaGVpZ2h0PSIxMS40ODEiLz48L3N2Zz4=");
   height: auto;
   min-height: 80%;
   font-size: 20px;
@@ -92,6 +113,8 @@ h4 {
   img {
     margin-bottom: 40px;
     text-align: center;
+    max-width: 95%;
+    width: auto;
   }
 }
 
