Wrapper 600px and adapt title

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,15 +8,16 @@ title: Kassiopé Project
 </head>
 <body>
     <div id="wrapper">
-      <h1 class="slideExpandUp">Our Kassiopé Project</h1>
-      <div class="text-center button">
-        <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
-      </div>
-      <!-- Button trigger modal -->
-      <div class="arrow text-center">
-        <a href="#issue">
-          <i class="fa fa-angle-down pulse" style="font-size: 90px; color: black;"></i>
-        </a>
+      <div class="row">
+        <div class="col-xs-4">
+
+        </div>
+        <div class="col-xs-8 writings text-center">
+          <h1 class="slideExpandUp">Our Kassiopé Project</h1>
+          <div class="button">
+            <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
+          </div>
+        </div>
       </div>
     </div>
 
