--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-  background-color: #ccc;
+  background-color: #edefed;
   font-family: $text-font;
   font-weight: 300;
   line-height: 1.5em;
@@ -8,37 +8,49 @@ html, body {
 
 
 #wrapper {
-  background-image: image-url("girl-reading.png");
-  opacity: 0.9;
+  background-image: image-url("girl-reading-2.png");
+  opacity: 1;
   background-size: cover;
-  height: auto;
-  min-height: 100%;
-  max-height: 100%;
-  text-align: center;
+  height: 600px;
   padding-top: 70px;
-  h1 {
-    display: inline-block;;
-    margin-bottom: 30px;
-    opacity: 1;
-    color: black;
-    font-family: $title-font;
-    font-weight: bold;
-    letter-spacing: 15px;
-    font-size: 150px;;
-  }
-  .button a {
-    margin-top: 15px;
-    padding: 15px;
-    font-size: 20px;
-    background-color: transparent;
-    border: 3px solid #fff;
-    text-transform: uppercase;
-    border-radius: 0.2;
-    -webkit-transition: 0.2s linear;
-    transition: 0.2s linear;
-    &:hover {
-      font-size: 25px;
+  .writings {
+    float: right;
+    h1 {
+      margin-right: 50px;
+      margin-bottom: 30px;
+      opacity: 1;
+      color: white;
+      font-family: $title-font;
+      letter-spacing: 15px;
+      font-size: 80px;
     }
+    .button a {
+      position: relative;
+      font-style: sans-serif;
+      font-weight: bold;
+      margin-top: 15px;
+      padding: 18px;
+      font-size: 13px;
+      background-color: transparent;
+      border: 1px solid #fff;
+      text-transform: uppercase;
+      border-radius: 0.2;
+      transition: all 0.3s ease 0s;
+      &:hover {
+        background-color: white;
+        color: #424242;
+        transition-property: opacity;
+        -webkit-transition-property: opacity;
+        transition-duration: 1s;
+        -webkit-transition-duration: 1s;
+        transition-timing-function: ease-out;
+        -webkit-transition-timing-function: ease-out;
+        transition-delay: initial;
+        -webkit-transition-delay: initial;
+      }
+
+  }
+
   }
   .arrow {
     position: absolute;
