Responsive title h1 wrapper
Center it and adapt row to device

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,10 +9,10 @@ title: Kassiopé Project
 <body>
     <div id="wrapper">
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-sm- 2 col-md-4">
 
         </div>
-        <div class="col-xs-8 writings text-center">
+        <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
           <h1 class="slideExpandUp">Our Kassiopé Project</h1>
           <div class="button">
             <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
