"Us" img left text right + arrow on wrapper

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,6 +19,12 @@ title: Kassiopé Project
           </div>
         </div>
       </div>
+      <div class="arrow text-center">
+        <a href="#issue">
+          <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
+        </a>
+
+      </div>
     </div>
 
 
@@ -51,7 +57,7 @@ title: Kassiopé Project
         <h2>Our action in Ahmedabad (India)</h2>
         <div class="container-fluid">
           <div class="row">
-            <div class="action-text col-md-8 col-xs-12">
+            <div class="action-text col-md-7 col-sm-8 col-xs-12">
               <ul>
                 <li>Our project will take place during the summer break of 2016</li>
                 <li>Provide the students of the center with free eye tests</li>
@@ -62,7 +68,7 @@ title: Kassiopé Project
               </ul>
             </div>
 
-            <div class="action-img text-center col-md-4 col-xs-12">
+            <div class="action-img text-center col-md-5 col-sm-4">
               <%= image_tag "fille.png", class: "hidden-xs" %>
             </div>
 
@@ -71,22 +77,20 @@ title: Kassiopé Project
       </div>
 
       <div id="us" class="box">
-        <h2>Let's talk about us !</h2>
-        <p>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</br>
-        Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</br>
-        We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.
-        </p>
+
         <div class="container-fluid">
+          <h2>Let's talk about us !</h2>
           <div class="row">
 
-            <div class="space col-xs-2">
-            </div>
-
-            <div class="us-text text-center col-xs-8">
+            <div class="us-text text-center col-xs-5">
               <%= image_tag "matt.png", class: "img-rounded hidden-xs" %>
             </div>
 
-            <div class="space col-xs-2">
+            <div class="space col-xs-7">
+              <p>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</br>
+              Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</br>
+              We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.
+              </p>
             </div>
           </div>
 
