--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -6,12 +6,13 @@ html, body {
   line-height: 1.5em;
 }
 
-
 #wrapper {
   background-image: image-url("girl-reading-2.png");
   opacity: 1;
   background-size: cover;
-  height: 600px;
+  height: auto;
+  min-height: 100%;
+  max-height: 100%;
   padding-top: 70px;
   .arrow {
     position: relative;
@@ -19,15 +20,15 @@ html, body {
     color: black;
     margin-left: -50px;
     left: 50%;
-    bottom: -240px;
+    bottom: -250px;
     text-align: center;
     font-size: 80px;
   }
   .writings {
     float: right;
     h1 {
-      margin-bottom: 30px;
       opacity: 1;
+      margin-top: 40px;
       color: white;
       font-family: $title-font;
       letter-spacing: 15px;
@@ -37,7 +38,7 @@ html, body {
       position: relative;
       font-style: sans-serif;
       font-weight: bold;
-      margin-top: 15px;
+      margin-top: 70px;
       padding: 18px;
       font-size: 13px;
       background-color: transparent;
