Add images + new pages on navbar + button video

--- a/source/action.html.erb
+++ b/source/action.html.erb
@@ -7,22 +7,16 @@ title: Kassiopé Project
   <meta charset="utf-8">
 </head>
 <body>
-  <div class="action-page">
-    <h2>Short presentation</h2>
-    <p>
-      Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled. It was created in June of 2015 by a group of six french students,
-      all of whom study at the Lycée International of St.Germain en Laye.
-    </p>
-    <h2>Our target</h2>
-    <p>
-      Its primary goal is to unearth diabetic retinopathy in regions lacking with eye doctors,
-      as in France the number of ophthalmologists has immensely decreased in the past few years. However, supported by batch of three new members we have decided
-      to export our project outside of France. Two of us, having already been to India, imagined our project in Ahmedabad where we would offer free eye tests and
-      glasses to the people of the slums, particularly to the people related to Manav Sadhna. Two of us have already taught in one of the schools near the Gandhi
-      Ashram and wish for our first eye tests to be in these types of schools where reading facilities are most needed. We hope to bolster our project to the entire
-      slum but our eye tests can only expand as far as our stocks of glasses will increase. Kassiopé is associated to two companies (LeVisologiste and MXOphtalmic)
-      who can offer cheap(er) equipment, supervise our projects and most importantly, make us look credible and trustworthy to future professional partners.
-    </p>
+  <div class="jumbotron">
+    <h1>We believe in progress !</h1>
+
   </div>
+  <h2>The issue</h2>
+  <p>
+    Obtaining glasses is a distant dream for billions of people. Access to proper glasses and especially eye care is highly restricted in most urbanizing countries, in fact according to the World Health Organization, well over a billion people suffer from refractive error making it the number one cause for low vision in our world. Lack of proper eyesight engenders terrible consequences to those affected by it. Opportunities diminish as one’s capacities decreases; low eyesight impedes on literacy making better job offers and social emancipation impossible for a large percentage of the population; quality of life recedes as everyday tasks become a challenge; general health can also be greatly deteriorated and in the worst cases may lead to blindness. Unfortunately this issue is set to get worse due to numerous factors composing our constantly growing and developing world. The World Health Organization has even anticipated that refractive error will have risen into the top ten global health issues affecting productivity and opportunities by 2030, passing HIV/AIDS in its global burden.
+
+Changes call for innovation and innovation leads to progress. Kassiopé aspires to innovate in a project that will lead to progress in this rising issue. It has decided   to make a first small but progressive step towards change, and wishes for that first step to be made in Ahmedabad, Gujarat.
+
+  </p>
 
 </body>
