--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -31,3 +31,10 @@
   background: $purple;
   color: white;
 }
+
+.content {
+  margin: 50px 80px 0px 80px;
+  text-align: justify;
+  font-size: 18px;
+  line-height: 2.3em;
+}
