--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,12 +10,47 @@ title: Kassiopé Project
     <div id="wrapper">
       <div class="row">
         <div class="col-sm- 2 col-md-4">
-
         </div>
         <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
           <h1 class="slideExpandUp">Our Kassiopé Project</h1>
-          <div class="button">
-            <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
+          <div class="row">
+            <div class="col-xs-2">
+            </div>
+            <div class="col-xs-4">
+              <div class="button">
+                <!--<a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>-->
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                  Launch demo modal
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                      </div>
+                      <div class="modal-body">
+                        ...
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="button">
+                <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
+              </div>
+            </div>
+            <div class="col-xs-2">
+            </div>
           </div>
         </div>
       </div>
@@ -23,33 +58,35 @@ title: Kassiopé Project
         <a href="#issue">
           <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
         </a>
-
       </div>
     </div>
 
 
-      <div id="issue" class="box">
-        <h2>What is the issue  </h2>
-        <h4>1.000.000.000 people suffer from refractive error !</h4>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-              <%= image_tag "rub.svg", width: "150", height: "150", class: "rubik-img logo-img" %>
-              <p>Every daily task becomes a challenge !</p>
+      <div id="issue">
+        <div class="container box">
+          <h2>What is the issue  </h2>
+          <h4>1.000.000.000 people suffer from refractive error !</h4>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
+                <%= image_tag "rub.svg", width: "150", height: "150", class: "rubik-img logo-img" %>
+                <p>Every daily task becomes a challenge !</p>
+              </div>
+
+              <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
+                <%= image_tag "read-book-logo.svg", width: "150", height: "150", class: "book-img logo-img" %>
+                <p>Studying results impossible !</p>
+              </div>
+
+              <div class="glasses scrollReveal feature col-md-4 col-xs-12">
+                <%= image_tag "glasses.svg", width: "150", height: "150", class: "glasses-img logo-img" %>
+                <p>Glasses are not affordable !</p>
+              </div>
             </div>
 
-            <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-              <%= image_tag "read-book-logo.svg", width: "150", height: "150", class: "book-img logo-img" %>
-              <p>Studying results impossible !</p>
-            </div>
-
-            <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-              <%= image_tag "glasses.svg", width: "150", height: "150", class: "glasses-img logo-img" %>
-              <p>Glasses are not affordable !</p>
-            </div>
           </div>
-
         </div>
+
 
       </div>
 
