--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -1,6 +1,15 @@
-.action-page {
-  margin: 50px 80px 0px 80px;
-  text-align: justify;
-  font-size: 18px;
-  line-height: 2.3em;
+.jumbotron {
+  background-image: image-url("flamme.jpg");
+  opacity: 1;
+  background-size: cover;
+  height: 550px;
+  padding-top: 70px;
+  h1 {
+    margin-top: 90px;
+    text-align: center;
+    color: white;
+    font-family: $title-font;
+    letter-spacing: 15px;
+    font-size: 60px;
+  }
 }
