2 buttons : video + support kassiope same design

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,8 +20,8 @@ title: Kassiopé Project
               <div class="button">
                 <!--<a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>-->
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                  Launch demo modal
+                <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">
+                  Our video
                 </button>
 
                 <!-- Modal -->
@@ -33,12 +33,9 @@ title: Kassiopé Project
                         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                       </div>
                       <div class="modal-body">
-                        ...
+                        <script src="https://www.youtube.com/watch?v=X_p1EzLEwCI" charset="utf-8"></script>
                       </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                      </div>
+
                     </div>
                   </div>
                 </div>
