--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -33,7 +33,8 @@ html, body {
       letter-spacing: 15px;
       font-size: 80px;
     }
-    .button a {
+
+    .button a, button {
       position: relative;
       width: 200px;
       text-align: center;
