First design action + about-us
Creation of texts.css.scss to manage css for texts on the same page
Resize image on Our action

--- a/source/about_us.html.erb
+++ b/source/about_us.html.erb
@@ -7,7 +7,7 @@ title: Kassiopé Project
   <meta charset="utf-8">
 </head>
 <body>
-  <div class="action-page">
+  <div class="about-us-text primary-text">
     <h2>Short presentation</h2>
     <p>
       Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled. It was created in June of 2015 by a group of six french students,
