--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,7 +33,7 @@ title: Kassiopé Project
                         <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                       </div>
                       <div class="modal-body">
-                        <script src="https://www.youtube.com/watch?v=X_p1EzLEwCI" charset="utf-8"></script>
+                        <iframe src="https://www.youtube.com/watch?v=X_p1EzLEwCIc"></iframe>
                       </div>
 
                     </div>
@@ -91,7 +91,7 @@ title: Kassiopé Project
         <h2>Our action in Ahmedabad (India)</h2>
         <div class="container-fluid">
           <div class="row">
-            <div class="action-text col-md-7 col-sm-8 col-xs-12">
+            <div class="next-to-photo-text col-md-7 col-sm-8 col-xs-12">
               <ul>
                 <li>Our project will take place during the summer break of 2016</li>
                 <li>Provide the students of the center with free eye tests</li>
@@ -116,15 +116,17 @@ title: Kassiopé Project
           <h2>Let's talk about us !</h2>
           <div class="row">
 
-            <div class="us-text text-center col-xs-5">
+            <div class="us-img text-center col-sm-5">
               <%= image_tag "matt.png", class: "img-rounded hidden-xs" %>
             </div>
 
-            <div class="space col-xs-7">
-              <p>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</br>
-              Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</br>
-              We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.
-              </p>
+
+            <div class="us-text next-to-photo-text col-sm-7">
+              <ul>
+                <li>Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled</li>
+                <li>Two of us, having already been to India and taught in one of the schools near the Gandhi Ashram, imagined a project of offering free eye tests and glasses to the numerous students, especially children</li>
+                <li>We all share the ambition : Travel to India, together, for the purpose of offering to children a decent quality of life, beginning by a suitable eyesight.</li>
+              </ul>
             </div>
           </div>
 
