--- a/source/action.html.erb
+++ b/source/action.html.erb
@@ -8,15 +8,26 @@ title: Kassiopé Project
 </head>
 <body>
   <div class="jumbotron">
-    <h1>We believe in progress !</h1>
+    <div class="row">
+      <div class="col-xs-6">
+        <h1 id="believe">We believe </h1>
+      </div>
+      <div class="col-xs-6">
+        <h1 id="progress">in progress !</h1>
+      </div>
+    </div>
 
   </div>
-  <h2>The issue</h2>
-  <p>
-    Obtaining glasses is a distant dream for billions of people. Access to proper glasses and especially eye care is highly restricted in most urbanizing countries, in fact according to the World Health Organization, well over a billion people suffer from refractive error making it the number one cause for low vision in our world. Lack of proper eyesight engenders terrible consequences to those affected by it. Opportunities diminish as one’s capacities decreases; low eyesight impedes on literacy making better job offers and social emancipation impossible for a large percentage of the population; quality of life recedes as everyday tasks become a challenge; general health can also be greatly deteriorated and in the worst cases may lead to blindness. Unfortunately this issue is set to get worse due to numerous factors composing our constantly growing and developing world. The World Health Organization has even anticipated that refractive error will have risen into the top ten global health issues affecting productivity and opportunities by 2030, passing HIV/AIDS in its global burden.
 
-Changes call for innovation and innovation leads to progress. Kassiopé aspires to innovate in a project that will lead to progress in this rising issue. It has decided   to make a first small but progressive step towards change, and wishes for that first step to be made in Ahmedabad, Gujarat.
+  <div class="issue-text primary-text">
+    <h2>The issue</h2>
+    <p>
+      Obtaining glasses is a distant dream for billions of people. Access to proper glasses and especially eye care is highly restricted in most urbanizing countries, in fact according to the World Health Organization, well over a billion people suffer from refractive error making it the number one cause for low vision in our world. Lack of proper eyesight engenders terrible consequences to those affected by it. Opportunities diminish as one’s capacities decreases; low eyesight impedes on literacy making better job offers and social emancipation impossible for a large percentage of the population; quality of life recedes as everyday tasks become a challenge; general health can also be greatly deteriorated and in the worst cases may lead to blindness. Unfortunately this issue is set to get worse due to numerous factors composing our constantly growing and developing world. The World Health Organization has even anticipated that refractive error will have risen into the top ten global health issues affecting productivity and opportunities by 2030, passing HIV/AIDS in its global burden.
 
-  </p>
+  Changes call for innovation and innovation leads to progress. Kassiopé aspires to innovate in a project that will lead to progress in this rising issue. It has decided   to make a first small but progressive step towards change, and wishes for that first step to be made in Ahmedabad, Gujarat.
+
+    </p>
+  </div>
+
 
 </body>
