--- a/source/stylesheets/pages/_about_us.css.scss
+++ b/source/stylesheets/pages/_about_us.css.scss
@@ -1,6 +1,3 @@
-.action-page {
-  margin: 50px 80px 0px 80px;
-  text-align: justify;
-  font-size: 18px;
-  line-height: 2.3em;
+.about-us-text {
+  margin-top: 60px;
 }
