--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -2,7 +2,7 @@
   background-image: image-url("flamme.jpg");
   opacity: 1;
   background-size: cover;
-  height: 550px;
+  height: 450px;
   padding-top: 70px;
   h1 {
     margin-top: 90px;
@@ -12,4 +12,10 @@
     letter-spacing: 15px;
     font-size: 60px;
   }
+
+}
+
+.issue-text {
+  margin-top: -40px;
+  margin-bottom: -45px;
 }
