Temporary : link to youtube on button video

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,13 +18,14 @@ title: Kassiopé Project
             </div>
             <div class="col-xs-4">
               <div class="button">
-                <!--<a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>-->
-                <!-- Button trigger modal -->
+                <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>
+                <!--
+                comment :  Button trigger modal
                 <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">
                   Our video
                 </button>
 
-                <!-- Modal -->
+                comment Modal
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -38,7 +39,7 @@ title: Kassiopé Project
 
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-xs-4">
