--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,35 +14,14 @@ title: Kassiopé Project
         <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
           <h1 class="slideExpandUp">Our Kassiopé Project</h1>
           <div class="row">
-            <div class="col-xs-2">
+            <div class="col-sm-2">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
               <div class="button">
                 <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Our video</a>
-                <!--
-                comment :  Button trigger modal
-                <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">
-                  Our video
-                </button>
-
-                comment Modal
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                      </div>
-                      <div class="modal-body">
-                        <iframe src="https://www.youtube.com/watch?v=X_p1EzLEwCIc"></iframe>
-                      </div>
-
-                    </div>
-                  </div>
-                </div> -->
               </div>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
               <div class="button">
                 <a target="_blank" href="https://www.gofundme.com" class="btn btn-warning btn-lg">Support Kassiope</a>
               </div>
