--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -7,7 +7,7 @@ html, body {
 }
 
 #wrapper {
-  background-image: image-url("girl-reading-2.png");
+  background-image: image-url("girl-reading-md.png");
   background-size: cover;
   height: auto;
   min-height: 100%;
@@ -26,11 +26,17 @@ html, body {
   .writings {
     float: right;
     h1 {
+
       margin-top: 40px;
       color: white;
       font-family: $title-font;
       letter-spacing: 15px;
-      font-size: 80px;
+      @media screen and (min-width:800px) {
+        font-size: 80px;
+      }
+      @media screen and (max-width:800px) {
+        font-size: 60px;
+      }
     }
 
     .button a, button {
@@ -39,7 +45,15 @@ html, body {
       text-align: center;
       font-style: sans-serif;
       font-weight: bold;
-      margin-top: 70px;
+      @media screen and (min-width:800px) {
+        margin-top: 70px;
+      }
+      @media screen and (max-width:800px) {
+        margin-top: 50px;
+      }
+      @media screen and (max-width:600px) {
+        margin-top: 20px;
+      }
       padding: 18px;
       font-size: 15px;
       background-color: transparent;
