Responsive margin-top wrapper

--- a/source/action.html.erb
+++ b/source/action.html.erb
@@ -9,10 +9,10 @@ title: Kassiopé Project
 <body>
   <div class="jumbotron">
     <div class="row">
-      <div class="col-xs-6">
+      <div class="text-center col-sm-6">
         <h1 id="believe">We believe </h1>
       </div>
-      <div class="col-xs-6">
+      <div class="text-center col-sm-6">
         <h1 id="progress">in progress !</h1>
       </div>
     </div>
