--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -31,32 +31,34 @@ title: Kassiopé Project
           </div>
         </div>
       </div>
-      <div class="arrow text-center">
-        <a href="#issue">
-          <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
-        </a>
+      <div class="row">
+        <div class="col-md-12 arrow text-center">
+          <a href="#issue">
+            <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
+          </a>
+        </div>
       </div>
     </div>
 
 
       <div id="issue">
         <div class="container box">
-          <h2>What is the issue  </h2>
+          <h2>What is the issue</h2>
           <h4>1.000.000.000 people suffer from refractive error !</h4>
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "rub.svg", width: "150", height: "150", class: "rubik-img logo-img" %>
+                <%= image_tag "rub.svg", class: "logo-homepage" %>
                 <p>Every daily task becomes a challenge !</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "read-book-logo.svg", width: "150", height: "150", class: "book-img logo-img" %>
+                <%= image_tag "read-book-logo.svg", class: "logo-homepage" %>
                 <p>Studying results impossible !</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-                <%= image_tag "glasses.svg", width: "150", height: "150", class: "glasses-img logo-img" %>
+                <%= image_tag "glasses.svg", class: "logo-homepage" %>
                 <p>Glasses are not affordable !</p>
               </div>
             </div>
