Add partners + flag

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,6 +32,9 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
+          <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
+          <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
