--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -50,9 +50,8 @@ $navbar-blue: #34496F;
   -webkit-transition: 0.2s linear;
   transition: 0.2s linear;
   &:hover {
-    color: white;
-    font-size: 50px;
-    transform: rotate(5deg);
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -62,6 +61,12 @@ $navbar-blue: #34496F;
   margin-left: 20px;
   width: 30px;
   height: 30px;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+  &:hover {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .navbar-transparent .navbar-nav > li > a{
