--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,8 +32,12 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
-          <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
-          <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
+          <a href="fr/index_fr.html">
+            <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
+          </a>
+          <a href="http://localhost:4567">
+            <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
+          </a>
 
         </div>
 
